fixed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ html, body {
     background-position: bottom;
     background-attachment: fixed;
     box-sizing: border-box;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow: auto;
 }
 
 *, *:before, *:after {
@@ -201,19 +204,19 @@ a.aboutlink {
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(200, 54, 54, 0.5);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  background: rgba(200, 54, 54, 0.5);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(200, 54, 54, 0.5);
+  background: rgba(200, 54, 54, 0.5);
 }
 
 
